# CommandAndControl

./: CC - Copie.sln  CC.sln  README.md  expat-2.2.6.tar
CCClient/: CCClient.cpp  CCClient.vcxproj  CCClient.vcxproj.filters  pch.h
CommandAndControlServer/: BuiltInCommand.cpp  BuiltInCommand.h  CommandAndControlServer.cpp  CommandAndControlServer.vcxproj  CommandAndControlServer.vcxproj.filters  pch.h
Debug/: ulxmlrpcpp.lib
expat/: expat.sln
expat-2.2.6/: expat.sln
ulxmlrpcpp/: Makefile.in  ulxr_cached_resource.h  ulxr_callparse_wb.h  ulxr_config-bcb5.h  ulxr_config-cygwin.h  ulxr_config-msvc.h  ulxr_config.h  ulxr_dispatcher.h  ulxr_expatwrap.h  ulxr_http_protocol.h  ulxr_method_adder.h  ulxr_mtrpc_server.h  ulxr_response.h  ulxr_responseparse.h  ulxr_responseparse_base.h  ulxr_value.h  ulxr_valueparse.h  ulxr_virtual_resource.h  ulxr_xmlparse.h
ulxmlrpcpp-1.7.5/ulxmlrpcpp/: Makefile.am  stdafx.h  ulxmlrpcpp-1.7.5.vcxproj  ulxmlrpcpp.h  ulxr_call.h  ulxr_callparse.h  ulxr_callparse_base.h  ulxr_connection.cpp  ulxr_connection.h  ulxr_except.h  ulxr_file_resource.h  ulxr_htmlform_handler.h  ulxr_http_client.h  ulxr_http_server.h  ulxr_log4j.h  ulxr_mutex.h  ulxr_protocol.h  ulxr_requester.h  ulxr_responseparse_wb.h  ulxr_signature.h  ulxr_ssl_connection.h  ulxr_tcpip_connection.h  ulxr_valueparse_base.h  ulxr_valueparse_wb.h  ulxr_wbxmlparse.h  ulxr_xmlparse_base.h
ulxmlrpcpp-1.7.5/ulxmlrpcpp/apps/: Makefile.in  intro_local  intro_oreilly
ulxmlrpcpp-1.7.5/ulxmlrpcpp/contrib/: mprocess_rpc_server.h  ssl_connection.h
ulxmlrpcpp-1.7.5/ulxmlrpcpp/docs/en/: appendix.docbook  bookinfo.docbook  credits.docbook  customize-flat.xsl  faq.docbook  index.nif  index.sgml  sect_cookie.docbook  sect_generator.docbook  sect_intro.docbook  sect_mt_http_client_server.docbook  sect_mt_xmlrpc_client_server.docbook  sect_proxy.docbook  sect_unicode.docbook  sect_variable_types.docbook  sect_xml_parser.docbook  sect_xmlrpc_client_server.docbook
ulxmlrpcpp-1.7.5/ulxmlrpcpp/docs/en/common/: Makefile.am  Makefile.in
ulxmlrpcpp-1.7.5/ulxmlrpcpp/docs/en/images/callouts/: Makefile.in
ulxmlrpcpp-1.7.5/ulxmlrpcpp/docs/en/img/: Makefile.am  Makefile.in
ulxmlrpcpp-1.7.5/ulxmlrpcpp/httpd/: Makefile.in  index.html
ulxmlrpcpp-1.7.5/ulxmlrpcpp/po/: Makefile.in
ulxmlrpcpp-1.7.5/ulxmlrpcpp/tests/: base64.cpp  http_client.cpp  http_server.cpp  readme  val1_suite
ulxmlrpcpp/apps/: Makefile.am
ulxmlrpcpp/contrib/: Makefile.am  Makefile.in
ulxmlrpcpp/docs/: Makefile.in
ulxmlrpcpp/docs/api/: Makefile.am  Makefile.in
ulxmlrpcpp/docs/en/: Makefile.am  Makefile.in  customize-chunked.xsl  customize-pdf.xsl  customize.xsl  index.docbook  sect_basic_security.docbook  sect_http_client_server.docbook  sect_ssl.docbook  sect_tcp_conn.docbook  sect_transfer.docbook  sect_wbxml_parser.docbook
ulxmlrpcpp/docs/en/common/: ulxmlrpcpp.css
ulxmlrpcpp/docs/en/images/: Makefile.in
ulxmlrpcpp/httpd/: Makefile.am  js-rpc-test.html  js-xmlrpc-all_scripts.js
ulxmlrpcpp/po/: Makefile.am
ulxmlrpcpp/tests/: Makefile.am  Makefile.in  http_server.cpp  https_client.cpp  mt_server.cpp  stressing-client.sh.in  stressing-server.sh.in  util.c
ulxmlrpcpp/tests/contrib/: Makefile.in
